--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shieldo",
   "version": "1.0.0",
-  "description": "Website template for Payload",
+  "description": "shieldo template for Payload",
   "license": "MIT",
   "type": "module",
   "scripts": {
